Fixed ugly buttons, and fixed habit input row bleeding out of the container issue

--- a/rising_tide/src/index.css
+++ b/rising_tide/src/index.css
@@ -204,7 +204,7 @@ input:focus, textarea {
 }
 
 #newHabitInput{
-  width: 500px;
+  width: 100%;
   border-radius: 10px;
   border: none;
   background-color: #fefcf0;
